Fix tittle alignment when zoom

--- a/src/TMLM.SalesIllustrator.Web/wwwroot/css/RT100.css
+++ b/src/TMLM.SalesIllustrator.Web/wwwroot/css/RT100.css
@@ -677,7 +677,7 @@ body {
     text-align: center;
     font-size: 30px;
     color: white;
-    transform: translateY(105px);
+    transform: translateY(88px);
     font-weight: 600;
 }
 
@@ -1084,8 +1084,8 @@ li:not(:last-child) {
 
 @media only screen and (max-height: 720px) {
     .main-title {
-        font-size: 24px !important;
-        transform: translateY(65px) !important;
+        font-size: 26px !important;
+        transform: translateY(63px) !important;
     }
 
     .sub-title {
