--- a/src/TMLM.SalesIllustrator.Web/wwwroot/css/main.css
+++ b/src/TMLM.SalesIllustrator.Web/wwwroot/css/main.css
@@ -410,7 +410,7 @@ body {
     text-align: center;
     font-size: 30px;
     color: white;
-    transform: translateY(105px);
+    transform: translateY(70px);
     font-weight: 600;
 }
 
@@ -804,7 +804,7 @@ li:not(:last-child) {
 @media only screen and (max-height: 720px) {
     .main-title {
         font-size: 24px !important;
-        transform: translateY(65px) !important;
+        transform: translateY(55px) !important;
     }
     .sub-title {
         transform: translateY(70px) !important;
